--- a/config/yugabyte/bulkload/pg/bulkload_goal1_pg.yaml
+++ b/config/yugabyte/bulkload/pg/bulkload_goal1_pg.yaml
@@ -6,6 +6,7 @@ password: Password321
 
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
+collect_pg_stat_statements: true
 loaderthreads: 4
 terminals: 4
 works:
@@ -24,7 +25,6 @@ microbenchmark:
         rows: 3000000
         indexes: 0
         filePath: orders.csv
-        rowsPerTransaction: 1000
         stringLength: 32
 
 #        # Goal 1 - 2 :: create table with PK -> create 1 index -> load data (1 index)
@@ -33,7 +33,6 @@ microbenchmark:
 #        rows: 3000000
 #        indexes: 1
 #        filePath: orders.csv
-#        rowsPerTransaction: 1000
 #        stringLength: 32
 
 #        # Goal 1 - 3 :: create table with PK -> create 5 index -> load data (5 index)
@@ -42,7 +41,6 @@ microbenchmark:
 #        rows: 3000000
 #        indexes: 5
 #        filePath: orders.csv
-#        rowsPerTransaction: 1000
 #        stringLength: 32
 
 
@@ -52,5 +50,4 @@ microbenchmark:
 #        rows: 3000000
 #        indexes: 10
 #        filePath: orders.csv
-#        rowsPerTransaction: 1000
 #        stringLength: 32
