--- a/config/yugabyte/bulkload/pg/bulkload_goal2_pg.yaml
+++ b/config/yugabyte/bulkload/pg/bulkload_goal2_pg.yaml
@@ -6,6 +6,7 @@ password: Password321
 
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
+collect_pg_stat_statements: true
 loaderthreads: 1
 terminals: 1
 works:
@@ -25,7 +26,6 @@ microbenchmark:
         rows: 3000000
         indexes: 1
         filePath: orders.csv
-        rowsPerTransaction: 1000
         stringLength: 32
         create_index_before_load: true
         create_index_after_load: false
@@ -36,7 +36,6 @@ microbenchmark:
 #        rows: 3000000
 #        indexes: 1
 #        filePath: orders.csv
-#        rowsPerTransaction: 1000
 #        stringLength: 32
 #        create_index_before_load: false
 #        create_index_after_load: true
@@ -47,7 +46,6 @@ microbenchmark:
 #        rows: 3000000
 #        indexes: 5
 #        filePath: orders.csv
-#        rowsPerTransaction: 1000
 #        stringLength: 32
 #        create_index_before_load: true
 #        create_index_after_load: false
@@ -58,7 +56,6 @@ microbenchmark:
 #        rows: 3000000
 #        indexes: 5
 #        filePath: orders.csv
-#        rowsPerTransaction: 1000
 #        stringLength: 32
 #        create_index_before_load: false
 #        create_index_after_load: true
