--- a/config/yugabyte/bulkload/pg/bulkload_goal3_pg.yaml
+++ b/config/yugabyte/bulkload/pg/bulkload_goal3_pg.yaml
@@ -6,6 +6,7 @@ password: Password321
 
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
+collect_pg_stat_statements: true
 loaderthreads: 1
 terminals: 1
 works:
@@ -24,7 +25,6 @@ microbenchmark:
         columns: 15
         rows: 3000000
         filePath: orders.csv
-        rowsPerTransaction: 1000
         stringLength: 32
 
 #        # Goal3 - 2 :: create table with 15 fields -> load data for 30M rows (only PK)
@@ -32,7 +32,6 @@ microbenchmark:
 #        columns: 15
 #        rows: 30000000
 #        filePath: orders.csv
-#        rowsPerTransaction: 1000
 #        stringLength: 32
 #
 #        # Goal3 - 3 :: create table with 15 fields -> load data for 300M rows (only PK)
@@ -40,5 +39,4 @@ microbenchmark:
 #        columns: 15
 #        rows: 300000000
 #        filePath: orders.csv
-#        rowsPerTransaction: 1000
 #        stringLength: 32
