--- a/config/yugabyte/bulkload/pg/bulkload_goal4_pg.yaml
+++ b/config/yugabyte/bulkload/pg/bulkload_goal4_pg.yaml
@@ -6,6 +6,7 @@ password: Password321
 
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
+collect_pg_stat_statements: true
 loaderthreads: 1
 terminals: 1
 
@@ -25,7 +26,6 @@ microbenchmark:
         columns: 10
         rows: 3000000
         filePath: orders.csv
-        rowsPerTransaction: 1000
         stringLength: 32
 
 #        # Goal4 - 2 :: create table with 20 fields, 3M rows -> load data (only PK)
@@ -33,7 +33,6 @@ microbenchmark:
 #        columns: 20
 #        rows: 3000000
 #        filePath: orders.csv
-#        rowsPerTransaction: 1000
 #        stringLength: 32
 #
 #        # Goal4 - 3 :: create table with 100 fields, 3M rows -> load data (only PK)
@@ -41,5 +40,4 @@ microbenchmark:
 #        columns: 100
 #        rows: 3000000
 #        filePath: orders.csv
-#        rowsPerTransaction: 1000
 #        stringLength: 32
