--- a/config/yugabyte/bulkload/yb/bulkload_goal2_yb.yaml
+++ b/config/yugabyte/bulkload/yb/bulkload_goal2_yb.yaml
@@ -5,6 +5,7 @@ username: yugabyte
 password:
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
+collect_pg_stat_statements: true
 loaderthreads: 1
 terminals: 1
 works:
@@ -24,7 +25,6 @@ microbenchmark:
         rows: 3000000
         indexes: 1
         filePath: orders.csv
-        rowsPerTransaction: 1000
         stringLength: 32
         create_index_before_load: true
         create_index_after_load: false
@@ -35,7 +35,6 @@ microbenchmark:
 #        rows: 3000000
 #        indexes: 1
 #        filePath: orders.csv
-#        rowsPerTransaction: 1000
 #        stringLength: 32
 #        create_index_before_load: false
 #        create_index_after_load: true
@@ -46,7 +45,6 @@ microbenchmark:
 #        rows: 3000000
 #        indexes: 5
 #        filePath: orders.csv
-#        rowsPerTransaction: 1000
 #        stringLength: 32
 #        create_index_before_load: true
 #        create_index_after_load: false
@@ -57,7 +55,6 @@ microbenchmark:
 #        rows: 3000000
 #        indexes: 5
 #        filePath: orders.csv
-#        rowsPerTransaction: 1000
 #        stringLength: 32
 #        create_index_before_load: false
 #        create_index_after_load: true
