--- a/config/yugabyte/bulkload/yb/bulkload_goal4_yb.yaml
+++ b/config/yugabyte/bulkload/yb/bulkload_goal4_yb.yaml
@@ -5,6 +5,7 @@ username: yugabyte
 password:
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
+collect_pg_stat_statements: true
 loaderthreads: 1
 terminals: 1
 
@@ -24,7 +25,6 @@ microbenchmark:
         columns: 10
         rows: 3000000
         filePath: orders.csv
-        rowsPerTransaction: 1000
         stringLength: 32
 
 #        # Goal4 - 2 :: create table with 20 fields, 3M rows -> load data (only PK)
@@ -32,7 +32,6 @@ microbenchmark:
 #        columns: 20
 #        rows: 3000000
 #        filePath: orders.csv
-#        rowsPerTransaction: 1000
 #        stringLength: 32
 #
 #        # Goal4 - 3 :: create table with 100 fields, 3M rows -> load data (only PK)
@@ -40,5 +39,4 @@ microbenchmark:
 #        columns: 100
 #        rows: 3000000
 #        filePath: orders.csv
-#        rowsPerTransaction: 1000
 #        stringLength: 32
