--- a/config/yugabyte/bulkload/yb_colocated/bulkload_goal4_yb_colocated.yaml
+++ b/config/yugabyte/bulkload/yb_colocated/bulkload_goal4_yb_colocated.yaml
@@ -3,6 +3,7 @@ driver: com.yugabyte.Driver
 url: jdbc:yugabytedb://localhost:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true
 username: yugabyte
 password:
+createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 collect_pg_stat_statements: true
