--- a/config/yugabyte/bulkload/yugabyte/bulkload_goal1_yb.yaml
+++ b/config/yugabyte/bulkload/yugabyte/bulkload_goal1_yb.yaml
@@ -7,12 +7,11 @@ password:
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 collect_pg_stat_statements: true
-loaderthreads: 4
-terminals: 4
+loaderthreads: 1
+terminals: 1
 works:
     work:
         time: 60
-        active_terminals: 1
         rate: unlimited
         warmup: 0
 
@@ -22,7 +21,7 @@ microbenchmark:
         # Goal 1 - 1 :: create table with PK -> load data (no index)
         tableName: orders
         columns: 15
-        rows: 3000000
+        rows: 300
         indexes: 0
         filePath: orders.csv
         stringLength: 32
