--- a/config/yugabyte/batch_inserts/batch_insert_yb.yaml
+++ b/config/yugabyte/batch_inserts/batch_insert_yb.yaml
@@ -1,7 +1,7 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
 #url: jdbc:yugabytedb://172.151.23.87:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
-url: jdbc:yugabytedb://localhost:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:yugabytedb://172.151.31.149:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
 username: yugabyte
 password: Password@321
 
@@ -13,15 +13,15 @@ collect_pg_stat_statements: true
 works:
     work:
         serial: true
-#        time_secs: 300
-#        active_terminals: 1
+        #        time_secs: 300
+        #        active_terminals: 1
         rate: unlimited
         warmup: 0
 microbenchmark:
-#    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBDefaultMicroBenchmark
+    #    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBDefaultMicroBenchmark
     class: com.oltpbenchmark.benchmarks.featurebench.customworkload.batchinsert.BatchInsertYB
     properties:
-#        setAutoCommit: true
+        setAutoCommit: true
 #        create:
 #            - drop table if exists index_test_4;
 #            - create table index_test_4 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id asc))
