--- a/config/yugabyte/bulkload/yugabyte/bulkload_goal3_yb.yaml
+++ b/config/yugabyte/bulkload/yugabyte/bulkload_goal3_yb.yaml
@@ -18,7 +18,7 @@ transactiontypes:
     transactiontype:
         name: FeatureBench
 microbenchmark:
-    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.pg.Goal3_yb
+    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal3_yb
     properties:
         # Goal3 - 1 :: create table with 15 fields -> load data for 3M rows (only PK)
         tableName: orders
