--- a/config/yugabyte/bulkload/yb_colocated/bulkload_goal2_yb_colocated.yaml
+++ b/config/yugabyte/bulkload/yb_colocated/bulkload_goal2_yb_colocated.yaml
@@ -1,8 +1,8 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://localhost:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:yugabytedb://localhost:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true&connectTimeout=144000&socketTimeout=14400&tcpKeepAlive=true
 username: yugabyte
-password:
+password: Password@321
 createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
@@ -18,7 +18,7 @@ transactiontypes:
     transactiontype:
         name: FeatureBench
 microbenchmark:
-    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal2_yb
+    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal2
     properties:
         # Goal2 - 1 :: create table with PK -> create 1 index -> Load data (1 index)
         tableName: orders
