--- a/config/yugabyte/bulkload/yugabyte/bulkload_goal1_yb.yaml
+++ b/config/yugabyte/bulkload/yugabyte/bulkload_goal1_yb.yaml
@@ -2,8 +2,7 @@ type: YUGABYTE
 driver: com.yugabyte.Driver
 url: jdbc:yugabytedb://localhost:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true
 username: yugabyte
-password:
-
+password: Password@321
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 collect_pg_stat_statements: true
@@ -16,12 +15,12 @@ works:
         warmup: 0
 
 microbenchmark:
-    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal1_yb
+    class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal1
     properties:
         # Goal 1 - 1 :: create table with PK -> load data (no index)
         tableName: orders
         columns: 15
-        rows: 300
+        rows: 3000
         indexes: 0
         filePath: orders.csv
         stringLength: 32
@@ -29,7 +28,7 @@ microbenchmark:
 #        # Goal 1 - 2 :: create table with PK -> create 1 index -> load data (1 index)
 #        tableName: orders
 #        columns: 15
-#        rows: 3000000
+#        rows: 3000
 #        indexes: 1
 #        filePath: orders.csv
 #        stringLength: 32
