--- a/pom.xml
+++ b/pom.xml
@@ -248,6 +248,17 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.hubspot.jinjava</groupId>
+            <artifactId>jinjava</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.13.4</version>
+        </dependency>
 
     </dependencies>
 
