--- a/config/yugabyte/scan_workloads/yugabyte/scanG11_yb_pkey_rangescan_join.yaml
+++ b/config/yugabyte/scan_workloads/yugabyte/scanG11_yb_pkey_rangescan_join.yaml
@@ -8,7 +8,7 @@
 # Filter condition returns 100000 rows
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://172.151.54.67:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
 username: yugabyte
 password: Password@123
 batchsize: 128
