--- a/config/yugabyte/scan_workloads/yugabyte/scanG3_yb_index_rangeScan_increasingRows.yaml
+++ b/config/yugabyte/scan_workloads/yugabyte/scanG3_yb_index_rangeScan_increasingRows.yaml
@@ -8,7 +8,7 @@
 #    Range scan time to fetch 1M rows
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://172.151.54.67:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
 username: yugabyte
 password: Password@123
 batchsize: 128
