--- a/config/yugabyte/scan_workloads/yugabyte/scanG9_yb_count_nonIndexed_rangescan_fullTableScan_increasingRow.yaml
+++ b/config/yugabyte/scan_workloads/yugabyte/scanG9_yb_count_nonIndexed_rangescan_fullTableScan_increasingRow.yaml
@@ -7,7 +7,7 @@
 # Time to scan a table with 10 million rows
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://172.151.54.67:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
 username: yugabyte
 password: Password@123
 batchsize: 128
