--- a/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG10_seqscan_increasingTabletCount.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG10_seqscan_increasingTabletCount.yaml
@@ -144,16 +144,16 @@ microbenchmark:
                   -   name: noIndex_fullTable_seqScan_1M_rows_3tablets_test
                       weight: 100
                       queries:
-                          -   query: select * from noIndex_fullTable_seqScan_1M_rows_3tablets_1 where col_bigint_id_1>1000001
+                          -   query: select col_bigint_id_1 from noIndex_fullTable_seqScan_1M_rows_3tablets_1 where col_bigint_id_1>1000001
             - workload: scanG10_yb_noIndex_fullTable_seqScan_1M_rows_6tablets
               run:
                   -   name: noIndex_fullTable_seqScan_1M_rows_6tablets_test
                       weight: 100
                       queries:
-                          -   query: select * from noIndex_fullTable_seqScan_1M_rows_6tablets_1 where col_bigint_id_1>1000001
+                          -   query: select col_bigint_id_1 from noIndex_fullTable_seqScan_1M_rows_6tablets_1 where col_bigint_id_1>1000001
             - workload: scanG10_yb_noIndex_fullTable_seqScan_1M_rows_12tablets
               run:
                   -   name: noIndex_fullTable_seqScan_1M_rows_12tablets_test
                       weight: 100
                       queries:
-                          -   query: select * from noIndex_fullTable_seqScan_1M_rows_12tablets_1 where col_bigint_id_1>1000001
+                          -   query: select col_bigint_id_1 from noIndex_fullTable_seqScan_1M_rows_12tablets_1 where col_bigint_id_1>1000001
