--- a/config/yugabyte/bulkload/yugabyte/bulkload_goal1_yb.yaml
+++ b/config/yugabyte/bulkload/yugabyte/bulkload_goal1_yb.yaml
@@ -1,8 +1,8 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true
-username: {{username}}
-password: {{password}}
+url: jdbc:yugabytedb://localhost:5433/yugabyte?sslmode=disable&ApplicationName=featurebench&reWriteBatchedInserts=true
+username: yugabyte
+password:
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
 collect_pg_stat_statements: true
@@ -17,21 +17,23 @@ works:
 microbenchmark:
     class: com.oltpbenchmark.benchmarks.featurebench.customworkload.bulkload.Goal1
     properties:
-        # Goal 1 - 1 :: create table with PK -> load data (no index)
-        tableName: orders
-        columns: 15
-        rows: 3000000
-        indexes: 0
-        filePath: orders.csv
-        stringLength: 32
+        type: list
+        workloads:
+            # Goal 1 - 1 :: create table with PK -> load data (no index)
+            - tableName: orders1
+              columns: 15
+              rows: 3000
+              indexes: 0
+              filePath: orders1.csv
+              stringLength: 32
 
-#        # Goal 1 - 2 :: create table with PK -> create 1 index -> load data (1 index)
-#        tableName: orders
-#        columns: 15
-#        rows: 3000000
-#        indexes: 1
-#        filePath: orders.csv
-#        stringLength: 32
+            # Goal 1 - 2 :: create table with PK -> create 1 index -> load data (1 index)
+            - tableName: orders2
+              columns: 15
+              rows: 3000
+              indexes: 1
+              filePath: orders2.csv
+              stringLength: 32
 
 #        # Goal 1 - 3 :: create table with PK -> create 5 index -> load data (5 index)
 #        tableName: orders
